Added nLog config

--- a/PlaywrightFramework/PlaywrightFramework.csproj
+++ b/PlaywrightFramework/PlaywrightFramework.csproj
@@ -22,6 +22,9 @@
     <None Update="configuration.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="nLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
