Added a new page, structured in the way I want it

--- a/PlaywrightFramework/configuration.json
+++ b/PlaywrightFramework/configuration.json
@@ -1,7 +1,7 @@
 {
   "browserContextOptions": {
     "acceptDownloads": true,
-    "baseURL": "https://playwright.dev",
+    "baseURL": "http://www.eaapp.somee.com",
     "bypassCSP": false,
     "colorScheme": "light",
     "isMobile": false,
