--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,13 +20,13 @@ jobs:
               run: dotnet restore
             - name: Build
               run: dotnet build --configuration Release --no-restore
-            # - name: Test
-            #   run: dotnet test --no-restore --verbosity normal --logger trx
-            # - name: Test Report
-            #   uses: dorny/test-reporter@v1
-            #   if: success() || failure()
-            #   with:
-            #     name: Tests
-            #     path: SeleniumFramework/TestResults/*.trx
-            #     reporter: dotnet-trx
-            #     fail-on-error: 'false'
+            - name: Test
+              run: dotnet test --no-restore --verbosity normal --logger trx
+            - name: Test Report
+              uses: dorny/test-reporter@v1
+              if: success() || failure()
+              with:
+                name: Tests
+                path: SeleniumFramework/TestResults/*.trx
+                reporter: dotnet-trx
+                fail-on-error: 'false'
