--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,6 +20,8 @@ jobs:
               run: dotnet restore
             - name: Build
               run: dotnet build --configuration Release --no-restore
+            - name: Install browsers
+              run: pwsh PlaywrightFramework/bin/Debug/netX/playwright.ps1 install
             - name: Test
               run: dotnet test --no-restore --verbosity normal --logger trx
             - name: Test Report
