--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,6 +20,10 @@ jobs:
               run: dotnet restore
             - name: Build
               run: dotnet build --configuration Release --no-restore
+
+    Test:
+        runs-on: windows-latest
+        steps:
             - name: Install browsers
               run: pwsh PlaywrightFramework/bin/Release/net6.0/playwright.ps1 install
             - name: Test
