Fix to run GitHub Actions steps after each other

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,6 +22,7 @@ jobs:
               run: dotnet build --configuration Release --no-restore
 
     Test:
+        needs: Build
         runs-on: windows-latest
         steps:
             - name: Install browsers
