--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -11,24 +11,24 @@ jobs:
         runs-on: windows-latest
 
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
             - name: Setup .NET Core
-              uses: actions/setup-dotnet@v3
+              uses: actions/setup-dotnet@v4
               with:
-                  dotnet-version: '6.0'
+                  dotnet-version: "8.0"
             - name: Install dependencies
               run: dotnet restore
             - name: Build
               run: dotnet build --configuration Release --no-restore
             - name: Install browsers
-              run: pwsh PlaywrightFramework/bin/Release/net6.0/playwright.ps1 install
+              run: pwsh PlaywrightFramework/bin/Release/net8.0/playwright.ps1 install
             - name: Test
               run: dotnet test --no-restore --verbosity normal --logger trx
             - name: Test Report
               uses: dorny/test-reporter@v1
               if: success() || failure()
               with:
-                name: Tests
-                path: PlaywrightFramework/TestResults/*.trx
-                reporter: dotnet-trx
-                fail-on-error: 'false'
+                  name: Tests
+                  path: PlaywrightFramework/TestResults/*.trx
+                  reporter: dotnet-trx
+                  fail-on-error: "false"
