--- a/PlaywrightFramework/PlaywrightFramework.csproj
+++ b/PlaywrightFramework/PlaywrightFramework.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.45.1" />
     <PackageReference Include="NLog" Version="5.3.2" />
